# gatekeeper

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/saguaro-gatekeeper/: Cargo.toml
programs/saguaro-gatekeeper/benches/: compute_units.rs
programs/saguaro-gatekeeper/src/: CPI_SAFETY_ANALYSIS.md  README.md  benchmarks.rs  constants.rs  lib.rs
programs/saguaro-gatekeeper/src/instructions/: append_data.rs  append_data_sandwich_validators_bitmap.rs  clear_data.rs  clear_data_sandwich_validators_bitmap.rs  close_pause_state.rs  close_sandwich_validator.rs  expand_and_write_bitmap.rs  expand_bitmap.rs  expand_sandwich_validators.rs  expand_sandwich_validators_bitmap.rs  initialize_large_bitmap.rs  initialize_pause_state.rs  mod.rs  modify_sandwich_validators.rs  pause_utils.rs  set_pause_state.rs  set_sandwich_validators.rs  update_sandwich_validator.rs  validate_sandwich_validators.rs
programs/saguaro-gatekeeper/tests/: compute_demo.rs  compute_results.rs  compute_unit_guide.rs
scripts/: README.md  build-network.sh  check-current-pda.ts  check-gated-slots.ts  check-specific-range.ts  debug-validation.ts  deploy-and-test-devnet.sh  deploy-fresh-devnet.sh  devnet-tests-simple.ts  devnet-tests.ts  fix-current-pda.ts  run-devnet-tests.sh  test-devnet-simple.sh  test-expandable-pda.ts  test-expansion-fix.ts  test-network.sh  update-program-id.sh
tests/: saguaro-gatekeeper.ts
ts/: sdk.ts
