[package]
name = "saguaro-gatekeeper"
version = "0.1.0"
description = "Solana Anchor program for on-chain permissions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "saguaro_gatekeeper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
debug-logs = []
compute-benchmarks = []
# Anchor framework features
anchor-debug = []
# Solana program features
custom-heap = []
custom-panic = []
# Network features
mainnet-beta = []
devnet = []
staging = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "lazy-account"] }
bytemuck = { version = "1.0", features = ["derive"] }
cfg-if = "1.0"


[dev-dependencies]
mollusk-svm = "0.3.0"
bincode = "1.3"
solana-program = "2.3.0"
mollusk-svm-bencher = "0.3.0"
solana-logger = "2.3.1"

